--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "prisma": "^5.6.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
